--- a/4-sol/4-sol.tex
+++ b/4-sol/4-sol.tex
@@ -112,15 +112,15 @@ Calcular
 		      \flecha{si $a\cdot b \divide c$}[$\entonces a \divide c \y b \divide c$]
 		      a \divide 2 \Tilde$
 
-	\item $2 \divide a \cdot b \entonces 2 \divide a $ \ o \ $2 \divide b$
+	\item $2 \divide a \cdot b \entonces 2 \divide a $ \ o \ $2 \divide b$\\
 	      \separadorCorto
 	      \hacer
 
-	\item $9 \divide a\cdot b \entonces 9 \divide a  $ \ o \ $9 \divide b$
+	\item $9 \divide a\cdot b \entonces 9 \divide a  $ \ o \ $9 \divide b$\\
 	      \separadorCorto
 	      \hacer
 
-	\item $a \divide b + c \entonces a \divide b $ \ o \  $9 \divide b$
+	\item $a \divide b + c \entonces a \divide b $ \ o \  $9 \divide b$\\
 	      \separadorCorto
 	      $12 \divide 20 + 4 \entonces 12 \noDivide 20$  \ y\   $ 12\noDivide 4 $
 
