--- a/4-sol/definiciones.tex
+++ b/4-sol/definiciones.tex
@@ -56,9 +56,9 @@
 \def\divide{\, | \,}
 \def\noDivide{\centernot\divide}
 \def\congruente{\, \equiv \,}
-\newcommand{\congruencia}[3]{#1 \equiv #2 \;(\text{mod}\;#3)}
+\newcommand{\congruencia}[3]{#1 \equiv #2 \;(#3)}
 \newcommand{\divset}[2]{\mathcal{D}(#1) = \set{#2}}
-
+\newcommand{\ub}[2]{ \underbrace{#1}_{#2} }
 
 
 % =====
